# peba2

./: CMakeLists.txt  README.md  face_recog.py  main.cpp  signature_client_priv.key  signature_client_pub.key  signature_server_priv.key  signature_server_pub.key
ciphertexts/: sample.ct  token.ct
keys/: public.key  relin.key  secret.key  signature_client_priv.key  signature_client_pub.key  signature_server_priv.key  signature_server_pub.key
src/: accuracy.cpp  accuracy.h  homomorphic_math.cpp  homomorphic_math.h  math.cpp  math.h  plain_math.cpp  plain_math.h  protocol_bfv.cpp  protocol_bfv.h  protocol_ckks.cpp  protocol_ckks.h  utilities.cpp  utilities.h
